INTYGFV-10551: Moved RestService to integration module, moved monitorlog to subscription service, updated tests.