@@ -17,42 +17,28 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-package se.inera.intyg.webcert.web.service.subscription;
+package se.inera.intyg.webcert.integration.kundportalen.service;
 
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestClientException;
-import org.springframework.web.client.RestClientResponseException;
 import org.springframework.web.client.RestTemplate;
-import se.inera.intyg.schemas.contract.util.HashUtility;
-import se.inera.intyg.webcert.web.service.monitoring.MonitoringLogService;
 import se.inera.intyg.webcert.integration.kundportalen.dto.OrganizationResponse;
 import se.inera.intyg.webcert.integration.kundportalen.enumerations.AuthenticationMethodEnum;
 
 @Service
 public class SubscriptionRestServiceImpl implements SubscriptionRestService {
-
-    private static final Logger LOG = LoggerFactory.getLogger(SubscriptionRestServiceImpl.class);
 
     @Value("${kundportalen.access.token}")
     private String kundportalenAccessToken;
@@ -69,39 +55,24 @@ public class SubscriptionRestServiceImpl implements SubscriptionRestService {
     private static final ParameterizedTypeReference<List<OrganizationResponse>> LIST_ORGANIZATION_RESPONSE
         = new ParameterizedTypeReference<>() { };
 
-    private final MonitoringLogService monitoringLogService;
     private final RestTemplate restTemplate;
 
-    public SubscriptionRestServiceImpl(MonitoringLogService monitoringLogService,
-        @Qualifier("subscriptionServiceRestTemplate") RestTemplate restTemplate) {
-        this.monitoringLogService = monitoringLogService;
+    public SubscriptionRestServiceImpl(@Qualifier("subscriptionServiceRestTemplate") RestTemplate restTemplate) {
         this.restTemplate = restTemplate;
     }
 
     @Override
     public List<String> getMissingSubscriptions(Map<String, String> organizationNumberHsaIdMap, AuthenticationMethodEnum authMethod) {
-        try {
-            final var organizationResponse = getSubscriptionServiceResponse(organizationNumberHsaIdMap.keySet());
-            final var organizationInfo = Objects.requireNonNull(organizationResponse.getBody());
-            return getCareProvidersMissingSubscription(organizationInfo, organizationNumberHsaIdMap, authMethod);
-        } catch (Exception e) {
-            errorLogException(organizationNumberHsaIdMap.values(), e);
-            monitorLogIfServiceCallFailure(organizationNumberHsaIdMap.values(), e);
-            return Collections.emptyList();
-        }
+        final var organizationResponse = getSubscriptionServiceResponse(organizationNumberHsaIdMap.keySet());
+        final var organizationInfo = Objects.requireNonNull(organizationResponse.getBody());
+        return getCareProvidersMissingSubscription(organizationInfo, organizationNumberHsaIdMap, authMethod);
     }
 
     @Override
     public boolean isMissingSubscriptionUnregisteredElegUser(String organizationNumber) {
-        try {
-            final var organizationResponse = getSubscriptionServiceResponse(Set.of(organizationNumber));
-            final var organizationInfo = Objects.requireNonNull(organizationResponse.getBody());
-            return missingSubscription(organizationInfo.get(0).getServiceCodes(), AuthenticationMethodEnum.ELEG);
-        } catch (Exception e) {
-            errorLogExceptionUnregisteredElegUser(organizationNumber, e);
-            monitorLogIfServiceCallFailure(Collections.singleton(HashUtility.hash(organizationNumber)), e);
-            return true;
-        }
+        final var organizationResponse = getSubscriptionServiceResponse(Set.of(organizationNumber));
+        final var organizationInfo = Objects.requireNonNull(organizationResponse.getBody());
+        return missingSubscription(organizationInfo.get(0).getServiceCodes(), AuthenticationMethodEnum.ELEG);
     }
 
     private ResponseEntity<List<OrganizationResponse>> getSubscriptionServiceResponse(Set<String> organizationNumbers) {
@@ -138,43 +109,5 @@ public class SubscriptionRestServiceImpl implements SubscriptionRestService {
             return activeServiceCodes.stream().noneMatch(serviceCode -> elegServiceCodes.contains(serviceCode));
         }
         return activeServiceCodes.stream().noneMatch(serviceCode -> sithsServiceCodes.contains(serviceCode));
-    }
-
-    private void errorLogException(Collection<String> hsaIds, Exception e) {
-        LOG.error("Kundportalen subscription service call failure for org numbers {}.", hsaIds, e);
-    }
-
-    private void errorLogExceptionUnregisteredElegUser(String orgNumber, Exception e) {
-        LOG.error("Kundportalen subscription service call failure for unregistered eleg user with org number {}.",
-            HashUtility.hash(orgNumber), e);
-    }
-
-    private void monitorLogIfServiceCallFailure(Collection<String> queryIds, Exception exception) {
-        if (exception instanceof RestClientException) {
-            if (exception instanceof RestClientResponseException) {
-                final var e = (RestClientResponseException) exception;
-                final var timestamp = e.getResponseHeaders() != null
-                    ? LocalDateTime.ofInstant(Instant.ofEpochMilli(e.getResponseHeaders().getDate()), ZoneId.systemDefault()) : null;
-                monitorLogRestClientException(queryIds, e.getRawStatusCode(), getStatusText(e.getRawStatusCode()), e.getMessage(),
-                    timestamp);
-            } else {
-                final var e = (RestClientException) exception;
-                monitorLogRestClientException(queryIds, null, null, e.getMessage(), null);
-            }
-        }
-    }
-
-    private void monitorLogRestClientException(Collection<String> queryIds, Integer statusCode, String statusText, String exceptionMessage,
-        LocalDateTime timestamp) {
-
-        monitoringLogService.logSubscriptionServiceCallFailure(queryIds, statusCode, statusText, exceptionMessage, timestamp);
-    }
-
-    private String getStatusText(int rawStatusCode) {
-        try {
-            return HttpStatus.valueOf(rawStatusCode).name();
-        } catch (IllegalArgumentException e) {
-            return "";
-        }
     }
 }
